--- a/room.monks.cloud/src/stylesheets/main.scss
+++ b/room.monks.cloud/src/stylesheets/main.scss
@@ -1,4 +1,4 @@
-@import "../../../../node_modules/@material/layout-grid/mdc-layout-grid";
+@import "@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
