Updated Ostrava and US adresses

--- a/www.topmonks.com/src/html/contact/index.njk
+++ b/www.topmonks.com/src/html/contact/index.njk
@@ -258,7 +258,7 @@
         <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
              itemtype="https://schema.org/Organization"
              id="ostrava">
-          <a href="https://goo.gl/maps/SkoWqfoKgg12" class="map" title="Show Ostrava Office on map">
+          <a href="https://goo.gl/maps/jF7BXs5QX7ek82Wc9" class="map" title="Show Ostrava Office on map">
             {{ map(alt="[mapa] Ostrava", src="v1544690834/topmonks.com/Contact/map_ostrava.png") }}
           </a>
           <div class="content">
@@ -266,15 +266,15 @@
             <span itemprop="legalName"><b>TopMonks s.r.o.</b></span>
             <div itemprop="location" itemscope itemtype="https://schema.org/Place">
               <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-                <span itemprop="streetAddress"><b>Sadová 1728/17</b></span><br>
+                <span itemprop="streetAddress"><b>Nádražní 108</b></span><br>
                 <span itemprop="postalCode">702 00</span>
                 <span itemprop="addressLocality">Ostrava</span><br>
                 <span itemprop="addressCountry">Czech Republic</span>
               </div>
-              <a href="https://goo.gl/maps/SkoWqfoKgg12" class="button" data-marker="ostrava">show on map</a>
+              <a href="https://goo.gl/maps/jF7BXs5QX7ek82Wc9" class="button" data-marker="ostrava">show on map</a>
               <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
-                <meta itemprop="latitude" content="49.8454375">
-                <meta itemprop="longitude" content="18.2892897">
+                <meta itemprop="latitude" content="49.8458349">
+                <meta itemprop="longitude" content="18.2785075">
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@
         <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
              itemtype="https://schema.org/Organization"
              id="san-francisco">
-          <a href="https://goo.gl/maps/YAJRUb1rDox" class="map" title="Show San Francisco Office on map">
+          <a href="https://goo.gl/maps/vXg6iCGmYsGpYyd48" class="map" title="Show San Francisco Office on map">
             {{ map(alt="[mapa] San Francisco", src="v1544690861/topmonks.com/Contact/map_sanfrancisco.png") }}
           </a>
           <div class="content">
@@ -290,16 +290,16 @@
             <span itemprop="legalName"><b>TopMonks INC</b></span>
             <div itemprop="location" itemscope itemtype="https://schema.org/Place">
               <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-                <span itemprop="streetAddress"><b>981 Mission St</b></span><br>
-                <span itemprop="addressLocality">San Francisco</span>,
+                <span itemprop="streetAddress"><b>105 N 1st St</b></span><br>
+                <span itemprop="addressLocality">San Jose</span>,
                 <span itemprop="addressRegion">CA</span>
-                <span itemprop="postalCode">94103</span><br>
+                <span itemprop="postalCode">95113</span><br>
                 <span itemprop="addressCountry">United States</span>
               </div>
-              <a href="https://goo.gl/maps/UXjifMwu2h42" class="button" data-marker="san-francisco">show on map</a>
+              <a href="https://goo.gl/maps/vXg6iCGmYsGpYyd48" class="button" data-marker="san-francisco">show on map</a>
               <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
-                <meta itemprop="latitude" content="37.7812056">
-                <meta itemprop="longitude" content="-122.4102898">
+                <meta itemprop="latitude" content="37.3459995">
+                <meta itemprop="longitude" content="-121.9070292">
               </div>
             </div>
           </div>
@@ -317,9 +317,10 @@
           <span itemprop="legalName"><b>TopMonks INC.</b></span><br>
           <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
           <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-            <span itemprop="streetAddress"><b>919 North Market Street, Suite 950 Wilmington</b></span><br>
-              <span itemprop="postalCode"><b>New Castle, Delaware 19801</b></span><br>
-          <span itemprop="addressLocality"><b>United States</b></span>
+            <span itemprop="streetAddress"><b>105 N 1st Street</b></span><br>
+            <b><span itemprop="addressLocality">San Jose</span>,
+              <span itemprop="addressLocality">California</span>
+              <span itemprop="postalCode">95113</span></b><br>
           </span>
         </span>
         </div>
