--- a/www.topmonks.cz/src/html/kontakt/index.njk
+++ b/www.topmonks.cz/src/html/kontakt/index.njk
@@ -199,7 +199,7 @@
       <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
            itemtype="https://schema.org/Organization"
            id="prague">
-        <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show Prague Office on map">
+        <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Zobrazit Pražskou kancelář na mapě">
           {{ map(alt="[mapa] Praha Spořilov", src="topmonks.com/Contact/map_prague.png") }}
         </a>
         <div class="content">
@@ -210,7 +210,7 @@
               <span itemprop="streetAddress"><b>Struhařovská 2931/9</b></span><br>
               <span itemprop="postalCode">141 00</span>
               <span itemprop="addressLocality">Praha 4</span><br>
-              <span itemprop="addressCountry">Česká Republika</span>
+              <span itemprop="addressCountry">Česká republika</span>
             </div>
             <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha">ukázat na mapě</a>
             <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
@@ -223,7 +223,7 @@
       <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
            itemtype="https://schema.org/Organization"
            id="ostrava">
-        <a href="https://goo.gl/maps/SkoWqfoKgg12" class="map" title="Show Ostrava Office on map">
+        <a href="https://goo.gl/maps/jF7BXs5QX7ek82Wc9" class="map" title="Zobrazit Ostravskou kancelář na mapě">
           {{ map(alt="[mapa] Praha Spořilov", src="topmonks.com/Contact/map_ostrava.png") }}
         </a>
         <div class="content">
@@ -231,40 +231,40 @@
           <span itemprop="legalName"><b>TopMonks s.r.o.</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress"><b>Sadová 1728/17</b></span><br>
+              <span itemprop="streetAddress"><b>Nádražní 108</b></span><br>
               <span itemprop="postalCode">702 00</span>
               <span itemprop="addressLocality">Ostrava</span><br>
               <span itemprop="addressCountry">Česká republika</span>
             </div>
-            <a href="https://goo.gl/maps/SkoWqfoKgg12" class="button" data-marker="ostrava">ukázat na mapě</a>
+            <a href="https://goo.gl/maps/jF7BXs5QX7ek82Wc9" class="button" data-marker="ostrava">ukázat na mapě</a>
             <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
-              <meta itemprop="latitude" content="49.8454375">
-              <meta itemprop="longitude" content="18.2892897">
+              <meta itemprop="latitude" content="49.8458349">
+              <meta itemprop="longitude" content="18.2785075">
             </div>
           </div>
         </div>
       </div>
       <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
            itemtype="https://schema.org/Organization"
-           id="San Francisco">
-        <a href="https://goo.gl/maps/YAJRUb1rDox" class="map" title="Show San Francisco Office on map">
-          {{ map(alt="[mapa] Praha Spořilov", src="topmonks.com/Contact/map_sanfrancisco.png") }}
+           id="san-francisco">
+        <a href="https://goo.gl/maps/vXg6iCGmYsGpYyd48" class="map" title="Zobrazit amaerickou kancelář na mapě">
+          {{ map(alt="[mapa] San Francisco", src="v1544690861/topmonks.com/Contact/map_sanfrancisco.png") }}
         </a>
         <div class="content">
           <h3 itemprop="name">San Francisco</h3>
-          <span itemprop="legalName"><b>TopMonks LLC</b></span>
+          <span itemprop="legalName"><b>TopMonks INC</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress"><b>981 Mission St</b></span><br>
-              <span itemprop="addressLocality">San Francisco</span>,
+              <b><span itemprop="streetAddress">105 N 1st St</span></b><br>
+              <span itemprop="addressLocality">San Jose</span>,
               <span itemprop="addressRegion">CA</span>
-              <span itemprop="postalCode">94103</span><br>
-              <span itemprop="addressCountry">United States</span>
+              <span itemprop="postalCode">95113</span><br>
+              <span itemprop="addressCountry">United States of America</span>
             </div>
-            <a href="https://goo.gl/maps/UXjifMwu2h42" class="button" data-marker="san-francisco">ukázat na mapě</a>
+            <a href="https://goo.gl/maps/vXg6iCGmYsGpYyd48" class="button" data-marker="san-francisco">show on map</a>
             <div itemprop="geo" itemscope itemtype="https://schema.org/GeoCoordinates">
-              <meta itemprop="latitude" content="37.7810763">
-              <meta itemprop="longitude" content="-122.4101207">
+              <meta itemprop="latitude" content="37.3459995">
+              <meta itemprop="longitude" content="-121.9070292">
             </div>
           </div>
         </div>
@@ -280,13 +280,13 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Fakturační adresa</h3>
-        <span itemprop="legalName"><b>TopMonks S.R.O.</b></span><br>
+        <span itemprop="legalName"><b>TopMonks s.r.o.</b></span><br>
         <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
-          <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-            <span itemprop="streetAddress"><b>Struhařovská 2931/9</b></span><br>
-            <span itemprop="postalCode"><b>141 00</b></span>
-          <span itemprop="addressLocality"><b>Praha 4</b></span>
-          </span>
+          <b><span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+            <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
+            <span itemprop="postalCode">141 00</span>
+            <span itemprop="addressLocality">Praha 4</span>
+          </span></b>
         </span><br>
         <a href="mailto:invoices@topmonks.com">invoices@topmonks.com</a>
 
@@ -294,12 +294,14 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Fakturační adresa USA</h3>
-        <span itemprop="legalName"><b>TopMonks INC.</b></span><br>
+        <span itemprop="legalName"><b>TopMonks Inc.</b></span><br>
         <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
           <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-            <span itemprop="streetAddress"><b>919 North Market Street, Suite 950 Wilmington</b></span><br>
-            <span itemprop="postalCode"><b>New Castle, Delaware 19801</b></span><br>
-          <span itemprop="addressLocality"><b>United States</b></span>
+            <span itemprop="streetAddress"><b>105 N 1st Street</b></span><br>
+            <b><span itemprop="addressLocality">San Jose</span>,
+              <span itemprop="addressLocality">California</span>
+              <span itemprop="postalCode">95113</span></b><br>
+            <span itemprop="addressCountry"><b>United States</b></span>
           </span>
         </span>
       </div>
