Added googleMap helper for generating static maps and used on contact pages

--- a/shared/src/common/helpers.njk
+++ b/shared/src/common/helpers.njk
@@ -6,3 +6,11 @@
                {{ src | cloudinaryUrl(crop="scale",width=366,dpr=2) }} 2x"
        width="100%">
 {% endmacro %}
+
+{% macro googleMap(alt, lat, long, class="responsive", width=320, height=270, markerColor="0xFE664B", poiVisibility="off") %}
+  <img alt="{{ alt }}"
+       src="https://maps.googleapis.com/maps/api/staticmap?size={{ width }}x{{ height }}&amp;style=feature:poi|visibility:{{ poiVisibility }}&amp;markers=color:{{ markerColor }}|{{ lat }},{{ long }}&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc"
+       width="{{ width }}"
+       height="{{ height }}"
+       class="{{ class }}">
+{% endmacro %}
