--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -13,6 +13,11 @@ body {
   margin: 0;
 }
 
+img.responsive {
+  width: 100%;
+  height: auto;
+}
+
 .tm-layout-wrapper {
   max-width: 1008px;
   margin: 0 auto;
