--- a/www.topmonks.cz/src/html/kontakt/index.njk
+++ b/www.topmonks.cz/src/html/kontakt/index.njk
@@ -247,10 +247,10 @@
       <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope=""
            itemtype="https://schema.org/Organization"
            id="san-francisco">
-        <a href="https://goo.gl/maps/vXg6iCGmYsGpYyd48" class="map" title="Zobrazit amaerickou kancelář na mapě">
+        <a href="https://goo.gl/maps/vXg6iCGmYsGpYyd48" class="map" title="Zobrazit americkou kancelář na mapě">
           {{ googleMap(alt="[mapa] San Francisco", lat=37.3378495, long=-121.8924583) }}
         </a>
-        <div class="content">
+        <div class="content" lang="en">
           <h3 itemprop="name">San Francisco</h3>
           <span itemprop="legalName"><b>TopMonks INC</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
